[gd_scene load_steps=11 format=2]

[ext_resource path="res://Turret/Turret.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.905882, 0.313726, 0.313726, 1 )

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0901961, 0.0705882, 0.0705882, 1 )

[sub_resource type="SphereMesh" id=10]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.580392, 0.529412, 0.529412, 1 )

[sub_resource type="CylinderShape" id=9]

[node name="Turret" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Base" type="MeshInstance" parent="."]
mesh = SubResource( 1 )

[node name="Taken Node" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.6, 0, -0.2, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="Gunner" type="Spatial" parent="."]

[node name="Cock Pit" type="MeshInstance" parent="Gunner"]
transform = Transform( 0.25, 0, -9.9476e-15, 0, 0.25, 0, 9.9476e-15, 0, 0.25, 0, 2.3, 0 )
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../..")
material/0 = SubResource( 8 )

[node name="Barrel" type="Spatial" parent="Gunner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Barrel Node" type="MeshInstance" parent="Gunner/Barrel"]
transform = Transform( 0.1, 0, 0, 0, -2.18557e-08, -0.1, 0, 0.5, -4.37114e-09, 0, -0.717767, -0.598522 )
mesh = SubResource( 3 )
skeleton = NodePath("../../Tower")
material/0 = SubResource( 7 )

[node name="Bullet Pos" type="Position3D" parent="Gunner/Barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0032568, -0.723683, -1.40375 )

[node name="Tower" type="MeshInstance" parent="Gunner"]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 1, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 6 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.125, 0, 0, 0, 0.2, 0, 1.712, 0 )
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 30, 0, 0, 0, 65, 0, 0, 0, 30, 0.0501474, 57.6213, -0.0290833 )
shape = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
